--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <section id="resume" class="resume">
       <h2>Resume</h2>
       <p>Click the button below to view or download my resume.</p>
-      <a href="#">Download Resume</a>
+      <a href="./media/Tejash Kumar Singh.pdf">Download Resume</a>
     </section>
 
     <section id="contact" class="contact">
@@ -156,3 +156,4 @@
     </section>
   </body>
 </html>
+
