--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         is my portfolio to showcase my skills and projects.
       </p>
       <img
-        src="https://via.placeholder.com/150"
+        src="./media/202100540.jpg"
         alt="Profile Photo"
         style="border-radius: 50%; margin-top: 10px"
       />
@@ -156,4 +156,5 @@
     </section>
   </body>
 </html>
+
 
