--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         color: #333;
       }
       header {
-        background: #171d21;
+        background: #171d21;  
         color: white;
         text-align: center;
         padding: 20px;
@@ -86,11 +86,6 @@
         Hello! I am a student passionate about technology and development. This
         is my portfolio to showcase my skills and projects.
       </p>
-      <img
-        src="./media/202100540.jpg"
-        alt="Profile Photo"
-        style="border-radius: 50%; margin-top: 10px"
-      />
     </section>
 
     <section id="about">
@@ -145,8 +140,8 @@
 
     <section id="contact" class="contact">
       <h2>Contact Me</h2>
-      <p><strong>Phone:</strong> +91 9102577699</p>
-      <p><strong>Email:</strong> jaitej123@gmail.com</p>
+      <p><strong>📞:</strong> <a href="tel:9170576311">9170576311</a></p>
+      <p><strong>📧:</strong> <a href="mailto:jaitej123@gmail.com">jaitej123@gmail.com</a></p>
       <p>
         <strong>Linkedin:</strong
         ><a href="https://www.linkedin.com/in/tejash-singh-892a15233/"
@@ -156,5 +151,3 @@
     </section>
   </body>
 </html>
-
-
